fix: add spacing negative variable

--- a/src/styles/core/_spacing.scss
+++ b/src/styles/core/_spacing.scss
@@ -17,6 +17,7 @@ $spacing: (
 :root {
   @each $key, $value in $spacing {
     --spacing-#{$key}: #{$value};
+    --spacing-negative-#{$key}: -#{$value};
   }
 }
 
